devops-kubernetes/simple-project/infrastructure/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: simple-project
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: simple-project.com
    http:
      paths:
      - path: /
        backend:
          serviceName: simple-frontend
          servicePort: http

  - host: api.simple-project.com
    http:
      paths:
      - path: /
        backend:
          serviceName: simple-api
          servicePort: http
